# mate-sensors-applet

./: .build.yml  .travis.yml  AUTHORS  CNAME  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  SensorsApplet.server.in.in  SensorsApplet.xml  TODO  aclocal.m4  autogen.sh  autogenclean.sh  configure  configure.ac  index.html  makepot  mate-sensors-applet.pot  org.mate.applets.SensorsApplet.mate-panel-applet.desktop.in.in  org.mate.applets.SensorsApplet.mate-panel-applet.in.in  org.mate.sensors-applet.gschema.xml.in  org.mate.sensors-applet.gschema.xml.in.in  org.mate.sensors-applet.sensor.gschema.xml.in.in
.tx/: config
2021-01-16-141616-6351-1@601dd52e9d61_master/: index.html  report-086383.html  report-1b7bc2.html  report-29f4f0.html  report-2d69cf.html  report-3a0954.html  report-3f760e.html  report-4e6b33.html  report-5b48d5.html  report-5b95d7.html  report-5de2b4.html  report-639b75.html  report-6f0518.html  report-740a94.html  report-7740fb.html  report-7e9b66.html  report-9c3447.html  report-9f1bb7.html  report-c10fd6.html  report-d98148.html  report-e816a3.html  report-f11c8f.html  report-f3d742.html  report-f5a7a0.html
2021-01-16-141714-2748-cppcheck@601dd52e9d61_master/: 1.html
2021-01-28-195714-6309-1@a20d71c68829_PACKAGE_URL/: index.html  report-19f770.html  report-2c0cd2.html  report-2e5546.html  report-3e5299.html  report-45cb28.html  report-4c4777.html  report-4cec25.html  report-583a0a.html  report-5b7faa.html  report-5f4d1f.html  report-71c7fd.html  report-770d37.html  report-79e357.html  report-a21cbd.html  report-b0699a.html  report-b65724.html  report-c55c77.html  report-c98ad7.html  report-ca0ccd.html  report-e8bf54.html  report-f0a15c.html  report-f21d9c.html  report-fe699b.html
2021-01-28-195815-1113-cppcheck@a20d71c68829_PACKAGE_URL/: 0.html
2021-02-05-001813-6306-1@fc41e86d4cc5_master/: index.html  report-15ae66.html  report-213a59.html  report-2d79a9.html  report-3bc7bf.html  report-3ca3cb.html  report-3d20d2.html  report-3d238c.html  report-3d87e4.html  report-473923.html  report-58f05a.html  report-66059d.html  report-727f9e.html  report-8880eb.html  report-8e41c7.html  report-988156.html  report-9d3369.html  report-a037dd.html  report-b14540.html  report-b2e74e.html  report-ccd1cb.html  report-d2e69c.html  report-d9f837.html  report-fb2b4a.html
2021-02-05-001909-5966-cppcheck@fc41e86d4cc5_master/: 3.html  index.html  stats.html
2021-02-22-231750-6303-1@c8ed1fc7aa7c_master/: index.html  report-1c238e.html  report-1eebf2.html  report-237e56.html  report-25cbfa.html  report-272cc9.html  report-2bbc71.html  report-2d25b6.html  report-4f0436.html  report-5a71ac.html  report-5cbc3c.html  report-5de79e.html  report-6295e6.html  report-79e733.html  report-810d58.html  report-815285.html  report-92c870.html  report-999ac9.html  report-a4ba91.html  report-a6e721.html  report-c7db11.html  report-d5ab65.html  report-f262aa.html  report-ffa9c7.html
2021-03-09-220349-5882-1@67e80c60a2da_master/: index.html  report-005134.html  report-0a2c87.html  report-0f8cf0.html  report-1216b8.html  report-12c636.html  report-30a76d.html  report-559e6e.html  report-592ebf.html  report-5aa5de.html  report-61a720.html  report-756ead.html  report-7cff7d.html  report-89e0ef.html  report-8a4a9b.html  report-98275c.html  report-ac3753.html  report-b23e98.html  report-c18150.html  report-ceeb4a.html  report-d8cb3e.html  report-e7d913.html  report-efbc02.html  report-f22884.html
2021-03-09-220445-6066-cppcheck@67e80c60a2da_master/: 2.html
2021-03-10-113725-5879-1@714cff2b68f3_shadow/: index.html  report-068f3a.html  report-19d44b.html  report-19f751.html  report-1dd33f.html  report-2ef034.html  report-351897.html  report-479c11.html  report-4f1f0c.html  report-561fc5.html  report-5c605a.html  (+13 more)
lib/: Makefile.am  Makefile.in  msa-test.c  sensors-applet-plugin.c
pixmaps/: Makefile.am  Makefile.in
plugins/: Makefile.am  Makefile.in
plugins/acpi/: Makefile.am  Makefile.in  acpi-plugin.c  acpi-plugin.h
plugins/aticonfig/: Makefile.am  Makefile.in  aticonfig-plugin.c  aticonfig-plugin.h
plugins/dummy/: Makefile.am  dummy-plugin.c  dummy-plugin.h
plugins/eee/: Makefile.am  Makefile.in  eee-plugin.c  eee-plugin.h
plugins/hddtemp/: Makefile.am  Makefile.in  hddtemp-plugin.c  hddtemp-plugin.h
plugins/i2c-proc/: Makefile.am  Makefile.in  i2c-proc-plugin.c  i2c-proc-plugin.h
plugins/i2c-sys/: Makefile.am  Makefile.in  i2c-sys-plugin.c  i2c-sys-plugin.h
plugins/i8k/: Makefile.am  Makefile.in  i8k-plugin.c  i8k-plugin.h
plugins/ibm-acpi/: Makefile.am  Makefile.in  ibm-acpi-plugin.c  ibm-acpi-plugin.h
plugins/libsensors/: Makefile.am  Makefile.in  libsensors-plugin.c  libsensors-plugin.h
plugins/mbmon/: Makefile.am  mbmon-plugin.c  mbmon-plugin.h
plugins/netbsd/: Makefile.am  netbsd-plugin.c  netbsd-plugin.h
plugins/nvidia/: Makefile.am  Makefile.in  nvidia-plugin.c  nvidia-plugin.h
plugins/omnibook/: Makefile.am  Makefile.in  omnibook-plugin.c  omnibook-plugin.h
plugins/pmu-sys/: Makefile.am  Makefile.in  pmu-sys-plugin.c  pmu-sys-plugin.h
plugins/smu-sys/: Makefile.am  Makefile.in  smu-sys-plugin.c  smu-sys-plugin.h
plugins/sonypi/: Makefile.am  Makefile.in  sonypi-plugin.c  sonypi-plugin.h
plugins/udisks/: Makefile.am  Makefile.in  udisks-plugin.c  udisks-plugin.h
plugins/udisks2/: Makefile.am  udisks2-plugin.c  udisks2-plugin.h
po/: LINGUAS  (+179 more)
sensors-applet/: Makefile.am  Makefile.in  about-dialog.c  about-dialog.h  active-sensor-libmatenotify.c  active-sensor-libmatenotify.h  active-sensor-libnotify.c  active-sensor-libnotify.h  active-sensor.c  active-sensor.h  config.h.in  main.c  msa-enum-types.c.in  msa-enum-types.h.in  msa-sensor.c  msa-sensor.h  msa-test.h  prefs-dialog.c  prefs-dialog.h  sensor-config-dialog.c  sensor-config-dialog.h  sensors-applet-gconf.c  sensors-applet-gconf.h  sensors-applet-mateconf.c  sensors-applet-mateconf.h  sensors-applet-plugin.h  sensors-applet-plugins.c  sensors-applet-plugins.h  sensors-applet-sensor.h  sensors-applet-settings.c  sensors-applet-settings.h  sensors-applet.c  sensors-applet.h
(+466 files in other folders)
