SUBDIRS = sensors-applet lib plugins pixmaps po help

ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

appletdir =  $(datadir)/mate-panel/applets
applet_in_files = org.mate.applets.sensors-applet.mate-panel-applet.in
applet_DATA = $(applet_in_files:.mate-panel-applet.in=.mate-panel-applet)

$(applet_in_files): $(applet_in_files).in Makefile
	$(AM_V_GEN)sed \
		-e "s|\@LIBEXECDIR\@|$(libexecdir)|" \
		$< > $@

%.mate-panel-applet: %.mate-panel-applet.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache

uidir 		= $(datadir)/mate-sensors-applet/ui
ui_DATA 	= SensorsApplet.xml

servicedir = $(datadir)/dbus-1/services
service_in_files = org.mate.panel.applet.SensorsAppletFactory.service.in
service_DATA = $(service_in_files:.service.in=.service)

org.mate.panel.applet.SensorsAppletFactory.service: $(service_in_files)
	$(AM_V_GEN)sed \
		-e "s|\@LIBEXECDIR\@|$(libexecdir)|" \
		$< > $@

@INTLTOOL_XML_NOMERGE_RULE@
gsettings_SCHEMAS = \
	org.mate.sensors-applet.gschema.xml \
	org.mate.sensors-applet.sensor.gschema.xml
@GSETTINGS_RULES@

%.gschema.xml.in: %.gschema.xml.in.in Makefile
	$(AM_V_GEN) $(SED) \
		-e 's^\@GETTEXT_PACKAGE\@^$(GETTEXT_PACKAGE)^g' \
		< $< > $@

CLEANFILES = $(applet_DATA) \
	$(applet_DATA).in \
	$(service_DATA) \
	$(gsettings_SCHEMAS_in) \
	$(gsettings_SCHEMAS) \
	*.gschema.valid

EXTRA_DIST = $(ui_DATA) \
	$(applet_in_files).in \
	$(service_in_files) \
	$(gsettings_SCHEMAS_in_in)

DISTCLEANFILES	= intltool-extract \
		   	intltool-merge \
	   	   	intltool-update

DISTCHECK_CONFIGURE_FLAGS	= --disable-scrollkeeper

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
			echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
